<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_text_fields_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_objsize"
        android:icon="@drawable/ic_baseline_aspect_ratio_24"
        android:title="@string/title_objsize" />
    <item
    android:id="@+id/navigation_objdis"
    android:icon="@drawable/ic_baseline_aspect_ratio_24"
    android:title="@string/title_objdis" />

</menu>
